gitops/apps/urlshortener/staging/ns.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: urlshortener-staging
  labels:
    name: urlshortener-staging
