gitops/apps/urlshortener/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:219967435143:certificate/d47de458-bcf4-4b05-97c9-bd6c57a538a9
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: urlshortener-staging
spec:
  rules:
  - host: short.tlawl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: urlshortener
            port:
              number: 80
